cmsdk: Add shared strings for lights and PG
Change-Id: I113de48c628cf702bcd23cf0df69900957483635

--- a/cm/res/res/values/strings.xml
+++ b/cm/res/res/values/strings.xml
@@ -226,4 +226,12 @@
     <string name="qs_themes_label">Themes</string>
     <string name="qs_themes_content_description">Customize your theme</string>
 
+    <!-- Privacy Guard -->
+    <string name="privacy_guard_manager_title">Privacy Guard</string>
+
+    <!-- Notification lights -->
+    <string name="lights_label">Lights</string>
+    <string name="battery_light_title">Battery light</string>
+    <string name="notification_light_title">Notification light</string>
+
 </resources>
